--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
         "symfony/framework-bundle": "2.1.*",
         "predis/predis": "0.7.*"
     },
+    "require-dev": {
+        "symfony/yaml": "2.1.*"
+    },
+
+
     "autoload": {
         "psr-0": { "Lt\\Bundle\\RedisBundle": "" }
     },
