--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.3.3",
         "symfony/framework-bundle": "2.1.*",
         "predis/predis": "0.7.*",
-        "lt/redtrine": "*"
+        "lt/redtrine": "dev-master"
     },
 
     "require-dev": {
@@ -25,5 +25,7 @@
         "psr-0": { "Lt\\Bundle\\RedisBundle": "" }
     },
     
-    "target-dir": "Lt/Bundle/RedisBundle"
+    "target-dir": "Lt/Bundle/RedisBundle",
+
+    "minimum-stability": "dev"
 }
